--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -122,11 +122,11 @@
             form:$("form#formRule"),
             tableCommon: tableCommon,
             extend : {
-                "add_url": "{:url('admin/user.user/edit','',false)}",
-                "edit_url": "{:url('admin/user.user/edit','',false)}?ids=",
-                "view_url": "{:url('admin/user.user/view','',false)}?ids=",
-                "del_url": "{:url('admin/user.user/del','',false)}",
-                "export_url" : "{:url('admin/user.user/index','',false)}"
+                "add_url": "{:url('admin/user.user/edit',['nav_id'=>input('nav_id')],false)}",
+                "edit_url": "{:url('admin/user.user/edit',['nav_id'=>input('nav_id')],false)}&ids=",
+                "view_url": "{:url('admin/user.user/view',['nav_id'=>input('nav_id')],false)}&ids=",
+                "del_url": "{:url('admin/user.user/del',['nav_id'=>input('nav_id')],false)}",
+                "export_url" : "{:url('admin/user.user/index',['id'=>input('nav_id')],false)}"
             }
         });
 
