--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -43,7 +43,7 @@
                         <!--</dl>-->
                     <!--</dd>-->
                     <!--<dd>-->
-                        <!--<a lay-href="app/message/index.html">消息中心</a>-->
+                        <!--<a lay-href="app/messuser.htmlhtml">消息中心</a>-->
                     <!--</dd>-->
                     <!--<dd data-name="workorder">-->
                         <!--<a lay-href="app/workorder/list.html">工单系统</a>-->
