--- a/application/admin/view/common/meta.html
+++ b/application/admin/view/common/meta.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="__STATIC__/style/admin.css" media="all">
     <link rel="stylesheet" href="__STATIC__/style/green-header.css" media="all">
     <link rel="stylesheet" href="__STATIC__/style/toastr.css" media="all">
+    <link rel="stylesheet" href="__STATIC__/awesome/css/font-awesome.min.css" media="all">
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
