--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -5,7 +5,108 @@
         {include file="common/header" /}
         <div class="layui-body" id="LAY_app_body" style="top: 50px;left: 0px">
         <div class="layui-fluid">
+
+            <!--------历史统计模块begin-------->
             <div class="layui-row layui-col-space15">
+                <div class="layui-col-md12 webody">
+                    <div class="layui-col-sm6 layui-col-md3">
+                        <div class="layui-card">
+                            <div class="sm-st clearfix">
+                                <span class="sm-st-icon st-red"><i class="fa fa-user-circle-o"></i></span>
+                                <div class="sm-st-info">
+                                    <span>35200</span>
+                                    总会员数
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-col-sm6 layui-col-md3">
+                        <div class="layui-card">
+                            <div class="sm-st clearfix">
+                                <span class="sm-st-icon st-violet"><i class="fa fa-book"></i></span>
+                                <div class="sm-st-info">
+                                    <span>219390</span>
+                                    历史访问总数
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-col-sm6 layui-col-md3">
+                        <div class="layui-card">
+                            <div class="sm-st clearfix">
+                                <span class="sm-st-icon st-blue"><i class="fa fa-shopping-bag"></i></span>
+                                <div class="sm-st-info">
+                                    <span>35200</span>
+                                    历史总订单数
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="layui-col-sm6 layui-col-md3">
+                        <div class="layui-card">
+                            <div class="sm-st clearfix">
+                                <span class="sm-st-icon st-green"><i class="fa fa-user-circle-o"></i></span>
+                                <div class="sm-st-info">
+                                    <span>352</span>
+                                    历史总金额
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--------统计模块end-------->
+
+                <!--------今日统计模块begin-------->
+                <div class="layui-row layui-col-space15">
+                    <div class="layui-col-md12 webody1">
+                        <div class="layui-col-sm6 layui-col-md3">
+                            <div class="layui-card">
+                                <div class="sm-st clearfix">
+                                    <span class="sm-st-icon st-money"><i class="fa fa-money"></i></span>
+                                    <div class="sm-st-info">
+                                        <span>1110</span>
+                                        今日成交金额（元）
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-sm6 layui-col-md3">
+                            <div class="layui-card">
+                                <div class="sm-st clearfix">
+                                    <span class="sm-st-icon st-client"><i class="fa fa-handshake-o"></i></span>
+                                    <div class="sm-st-info">
+                                        <span>219390</span>
+                                        今日成交客户（人）
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-sm6 layui-col-md3">
+                            <div class="layui-card">
+                                <div class="sm-st clearfix">
+                                    <span class="sm-st-icon st-percent"><i class="fa fa-percent"></i></span>
+                                    <div class="sm-st-info">
+                                        <span>35200</span>
+                                        成交转化率（百分比）
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-col-sm6 layui-col-md3">
+                            <div class="layui-card">
+                                <div class="sm-st clearfix">
+                                    <span class="sm-st-icon st-back-money"><i class="fa  fa-volume-up"></i></span>
+                                    <div class="sm-st-info">
+                                        <span>352</span>
+                                        昨日催付挽回金额（元）
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--------今日模块end-------->
+
+                <!--
                 <div class="layui-col-md12 webody">
                     <div class="layui-col-sm6 layui-col-md3">
                         <div class="layui-card">
@@ -74,6 +175,7 @@
                         </div>
                     </div>
                 </div>
+                -->
                 <div class="layui-col-sm12 webody1">
                     <div class="layui-card">
                         <div class="layui-card-header">
@@ -120,6 +222,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="layui-col-sm12 webody1">
                     <div class="layui-row layui-col-space15">
                         <div class="layui-col-sm6">
@@ -190,69 +293,6 @@
                                     <div class="layui-tab-content">
                                         <div class="layui-tab-item layui-show">
                                             <table id="LAY-index-prograss"></table>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="layui-col-sm12">
-                            <div class="layui-card">
-                                <div class="layui-card-header">用户全国分布</div>
-                                <div class="layui-card-body">
-                                    <div class="layui-row layui-col-space15">
-                                        <div class="layui-col-sm4">
-                                            <table class="layui-table layuiadmin-page-table" lay-skin="line">
-                                                <thead>
-                                                <tr>
-                                                    <th>排名</th>
-                                                    <th>地区</th>
-                                                    <th>人数</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr>
-                                                    <td>1</td>
-                                                    <td>浙江</td>
-                                                    <td>62310</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>2</td>
-                                                    <td>上海</td>
-                                                    <td>59190</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>3</td>
-                                                    <td>广东</td>
-                                                    <td>55891</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>4</td>
-                                                    <td>北京</td>
-                                                    <td>51919</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>5</td>
-                                                    <td>山东</td>
-                                                    <td>39231</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>6</td>
-                                                    <td>湖北</td>
-                                                    <td>37109</td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                        <div class="layui-col-sm8">
-
-                                            <div class="layui-carousel layadmin-carousel layadmin-dataview"
-                                                 data-anim="fade" lay-filter="LAY-index-pagethree">
-                                                <div carousel-item id="LAY-index-pagethree">
-                                                    <div><i class="layui-icon layui-icon-loading1 layadmin-loading"></i>
-                                                    </div>
-                                                </div>
-                                            </div>
-
                                         </div>
                                     </div>
                                 </div>
