--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -153,7 +153,7 @@
                                 </div>
                             </div>
                         </div>
-
+                            <!--
                             <div class="layui-col-sm12 webody1">
                                 <div class="layui-card">
                                     <div class="layui-card-header">
@@ -200,6 +200,7 @@
                                     </div>
                                 </div>
                             </div>
+                            -->
                         </div>
                         <!--------左侧模块模块end-------->
 
@@ -207,7 +208,7 @@
                         <div class="layui-col-md3 layui-col-sm6 right-module">
                             <!--------店铺信息模块begin-------->
                             <div class="layui-card yty-card">
-                                <div class="layui-card-header h1">店铺信息</div>
+                                <div class="layui-card-header h1"><span class="sm-st-icon-right shop-info"><i class="fa  fa-diamond"></i></span> 店铺信息</div>
                                 <div class="layui-card-body">
                                     <table class="layui-table table-border" lay-skin="line" lay-size="sm">
                                         <colgroup>
@@ -222,15 +223,15 @@
                                                 <td class="yty_tdright">覃雪宁<span class="shop_level">标准版</span></td>
                                             </tr>
                                             <tr>
-                                                <td class="yty_tdleft">到期时间：<span class="expire_date red_color">2019-01-28</span></td>
+                                                <td class="yty_tdright">到期时间：<span class="expire_date red_color">2019-01-28</span></td>
                                                 <td class="yty_tdright">
-                                                    <button class="layui-btn yty-btn layui-btn-sm layui-btn-fluid" lay-submit="">软件续费</button>
+                                                    <button class="layui-btn yty-btn layui-btn-normal layui-btn-sm layui-btn-fluid" lay-submit="">软件续费</button>
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td class="yty_tdleft">剩余短信：<span class="sms red_color">300</span>条</td>
+                                                <td class="yty_tdright">剩余短信：<span class="sms red_color">300</span>条</td>
                                                 <td class="yty_tdright">
-                                                    <button class="layui-btn yty-btn layui-btn-sm layui-btn-fluid" lay-submit="">短信充值</button>
+                                                    <button class="layui-btn yty-btn layui-btn-normal layui-btn-sm layui-btn-fluid" lay-submit="">短信充值</button>
                                                 </td>
                                             </tr>
 
@@ -241,8 +242,8 @@
                             <!--------店铺信息模块end-------->
 
                             <!--------公告信息模块begin-------->
-                            <div class="layui-card yty-notice" style="height: 260px">
-                                <div class="layui-card-header h1">公告</div>
+                            <div class="layui-card yty-notice yty-card" style="height: 260px">
+                                <div class="layui-card-header h1"><span class="sm-st-icon-right"><i class="fa  fa-volume-up"></i></span> 公告</div>
                                 <div class="layui-card-body">
                                     <ul>
                                         <li class="yty-notice-t"><a href="">【通知】彩票营销服务下线通知<span class="notice">2018-12-28</span></a></li>
@@ -256,6 +257,37 @@
                                 </div>
                             </div>
                             <!--------公告信息模块end-------->
+
+                            <!--------联系客服模块begin-------->
+                            <div class="layui-card yty-card" style="height: 260px">
+                                <div class="layui-card-header h1"><span class="sm-st-icon-right sm-client"><i class="fa fa-volume-control-phone"></i></span> 联系客服</div>
+                                <div class="layui-card-body">
+                                    <table class="layui-table table-border" lay-skin="line" lay-size="sm">
+                                        <colgroup>
+                                            <col class="yty_tdright" width="100%">
+                                        </colgroup>
+                                        <tbody>
+                                        <tr>
+                                            <td class="yty_tdright">客服热线：<span class="expire_date  red_color">0755-46513546</span></td>
+                                        </tr>
+                                        <tr>
+                                            <td class="yty_tdright">周末客服：<span class="sms red_color">1374654656</span></td>
+                                        </tr>
+                                        <tr>
+                                            <td class="yty_tdright">微信咨询：<span class="sms red_color">1374654656</span></td>
+                                        </tr>
+                                        <tr>
+                                            <td class="yty_tdright">
+                                                QQ咨询：
+                                                <a class="serviceIcon" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2778686329&amp;site=qq&amp;menu=yes" target="_blank"><img style="CURSOR: pointer" border="0" src="http://wpa.qq.com/pa?p=1:2778686329:10" alt="点击这里给我发消息"></a>
+                                                <a class="serviceIcon" href="http://wpa.qq.com/msgrd?v=3&amp;uin=2778686329&amp;site=qq&amp;menu=yes" target="_blank"><img style="CURSOR: pointer" border="0" src="http://wpa.qq.com/pa?p=1:2778686329:10" alt="点击这里给我发消息"></a>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!--------联系客服模块end-------->
 
                         </div>
                         <!--------又侧模块模块end-------->
