--- a/application/admin/view/dashboard/detail.html
+++ b/application/admin/view/dashboard/detail.html
@@ -12,8 +12,8 @@
                         <div class="layui-col-md9 layui-col-sm6">
                             <!--------历史统计模块begin-------->
                             <div class="layui-col-md12 webody">
-                                <div class="layui-col-sm6 layui-col-md3">
-                                    <div class="layui-card">
+                                <div class="layui-card">
+                                    <div class="layui-col-sm6 layui-col-md3">
                                         <div class="sm-st clearfix">
                                             <span class="sm-st-icon st-red"><i class="fa fa-users"></i></span>
                                             <div class="sm-st-info">
@@ -22,9 +22,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="layui-col-sm6 layui-col-md3">
-                                    <div class="layui-card">
+                                    <div class="layui-col-sm6 layui-col-md3">
                                         <div class="sm-st clearfix">
                                             <span class="sm-st-icon st-violet"><i class="fa fa-book"></i></span>
                                             <div class="sm-st-info">
@@ -33,9 +31,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="layui-col-sm6 layui-col-md3">
-                                    <div class="layui-card">
+                                    <div class="layui-col-sm6 layui-col-md3">
                                         <div class="sm-st clearfix">
                                             <span class="sm-st-icon st-blue"><i class="fa fa-shopping-bag"></i></span>
                                             <div class="sm-st-info">
@@ -44,9 +40,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="layui-col-sm6 layui-col-md3">
-                                    <div class="layui-card">
+                                    <div class="layui-col-sm6 layui-col-md3">
                                         <div class="sm-st clearfix">
                                             <span class="sm-st-icon st-green"><i class="fa fa-rmb"></i></span>
                                             <div class="sm-st-info">
@@ -61,52 +55,90 @@
 
                             <!--------今日统计模块begin-------->
                             <div class="layui-col-md12 webody">
+                                <div class="layui-card">
                                     <div class="layui-col-sm6 layui-col-md3">
-                                        <div class="layui-card">
-                                            <div class="sm-st clearfix">
-                                                <span class="sm-st-icon st-money"><i class="fa fa-money"></i></span>
-                                                <div class="sm-st-info">
-                                                    <span>1110</span>
-                                                    今日成交金额（元）
-                                                </div>
+                                        <div class="sm-st clearfix">
+                                            <span class="sm-st-icon st-money"><i class="fa fa-money"></i></span>
+                                            <div class="sm-st-info">
+                                                <span>1110</span>
+                                                今日成交金额（元）
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="layui-col-sm6 layui-col-md3">
+                                        <div class="sm-st clearfix">
+                                            <span class="sm-st-icon st-client"><i class="fa fa-handshake-o"></i></span>
+                                            <div class="sm-st-info">
+                                                <span>219390</span>
+                                                今日成交客户（人）
                                             </div>
                                         </div>
                                     </div>
                                     <div class="layui-col-sm6 layui-col-md3">
-                                        <div class="layui-card">
-                                            <div class="sm-st clearfix">
-                                                <span class="sm-st-icon st-client"><i class="fa fa-handshake-o"></i></span>
-                                                <div class="sm-st-info">
-                                                    <span>219390</span>
-                                                    今日成交客户（人）
-                                                </div>
+                                        <div class="sm-st clearfix">
+                                            <span class="sm-st-icon st-percent"><i class="fa fa-percent"></i></span>
+                                            <div class="sm-st-info">
+                                                <span>50%</span>
+                                                成交转化率（百分比）
                                             </div>
                                         </div>
                                     </div>
                                     <div class="layui-col-sm6 layui-col-md3">
-                                        <div class="layui-card">
-                                            <div class="sm-st clearfix">
-                                                <span class="sm-st-icon st-percent"><i class="fa fa-percent"></i></span>
-                                                <div class="sm-st-info">
-                                                    <span>35200</span>
-                                                    成交转化率（百分比）
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="layui-col-sm6 layui-col-md3">
-                                        <div class="layui-card">
-                                            <div class="sm-st clearfix">
-                                                <span class="sm-st-icon st-back-money"><i class="fa  fa-volume-up"></i></span>
-                                                <div class="sm-st-info">
-                                                    <span>352</span>
-                                                    昨日催付挽回金额（元）
-                                                </div>
+                                        <div class="sm-st clearfix">
+                                            <span class="sm-st-icon st-back-money"><i
+                                                    class="fa  fa-volume-up"></i></span>
+                                            <div class="sm-st-info">
+                                                <span>352</span>
+                                                昨日催付挽回金额（元）
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                             <!--------今日模块end-------->
+
+                            <!--------推荐功能模块begin-------->
+                            <div class="layui-col-md12 webody1">
+                                <div class="layui-card">
+                                    <div class="layui-card-header">推荐功能</div>
+                                    <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                        <div class="sm-st-recommend-re clearfix">
+                                            <div class="sm-st-icon st-money"><i class="fa  fa-envelope-o"></i></div>
+                                            <div class="sm-st-info-re">
+                                                <span>短信群发</span>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                        <div class="sm-st-recommend-re clearfix">
+                                            <span class="sm-st-icon st-client"><i class="fa fa-podcast"></i></span>
+                                            <div class="sm-st-info-re">
+                                                催付提醒
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                        <div class="sm-st-recommend-re sm-st-info clearfix">
+                                            <span class="sm-st-icon st-percent"><i class="fa fa-free-code-camp"></i></span>
+                                            <div class="sm-st-info-re">
+                                                订单关怀
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="layui-col-sm6 layui-col-md3 recommend-col">
+                                        <div class="sm-st-recommend-re clearfix">
+                                            <span class="sm-st-icon st-back-money"><i class="fa  fa-qrcode"></i></span>
+                                            <div class="sm-st-info-re">
+                                                数据分析
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--------推荐功能模块end-------->
+
                             <div class="layui-col-sm12 webody1">
                             <div class="layui-card">
                                 <div class="layui-card-header">
@@ -204,7 +236,7 @@
                         </div>
                         <!--------左侧模块模块end-------->
 
-                        <!--------又侧模块模块begin-------->
+                        <!--------右侧模块模块begin-------->
                         <div class="layui-col-md3 layui-col-sm6 right-module">
                             <!--------店铺信息模块begin-------->
                             <div class="layui-card yty-card">
@@ -260,7 +292,7 @@
 
                             <!--------联系客服模块begin-------->
                             <div class="layui-card yty-card" style="height: 260px">
-                                <div class="layui-card-header h1"><span class="sm-st-icon-right sm-client"><i class="fa fa-volume-control-phone"></i></span> 联系客服</div>
+                                <div class="layui-card-header h1"><span class="sm-st-icon-right sm-client"><i class="fa fa-phone-square"></i></span> 联系客服</div>
                                 <div class="layui-card-body">
                                     <table class="layui-table table-border" lay-skin="line" lay-size="sm">
                                         <colgroup>
